# Server

./: db.sqlite3  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
djangoProject1/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
static/css/: main.css
staticfiles/: staticfiles.json
templates/: base.html
templates/html/: User_room.html  User_room_details.html  index.html  map.html  room_create.html  room_delete.html  room_details.html  room_edit.html  rules.html  singl.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_done.html  password_reset_form.html  signup.html
